Add auth to backend
